Bug 130592 - Incorrect line breaking for CJK text in UI with certain VCL backends
Summary: Incorrect line breaking for CJK text in UI with certain VCL backends
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium trivial
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords:
Depends on:
Blocks: CJK Anchor-and-Text-Wrap
  Show dependency treegraph
 
Reported: 2020-02-11 15:55 UTC by Ming Hua
Modified: 2025-04-09 14:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
A Chinese comma at the start of a line (17.10 KB, image/png)
2020-02-11 15:56 UTC, Ming Hua
Details
A Chinese period on a line all by itself (19.02 KB, image/png)
2020-02-11 15:57 UTC, Ming Hua
Details
linebreaks in the middle of English words (17.54 KB, image/png)
2020-02-11 15:59 UTC, Ming Hua
Details
About > License Information dialog (16.75 KB, image/png)
2020-08-06 19:31 UTC, Ming Hua
Details
Insert > Special Characters dialog (33.54 KB, image/png)
2020-08-06 20:56 UTC, Ming Hua
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ming Hua 2020-02-11 15:55:01 UTC
I don't know if this only happens on Windows VCL or not, and it probably is not Tip-of-the-Day specific (but I don't know of other places that has long text that relies on system's line wrapping), but that's where I've seen this bug.

The line wrapping for the tips in TotD dialog on my Chinese Windows 10 is very bad, for both Chinese and English (untranslated) text.  Punctuation marks at start of a line, line break in the middle of an English word, etc.  I'll attach a few screenshots to illustrate specific problems.

Is there an option that can be tweaked to improve the system's line wrapping?  Or can this only be fixed by employing the complicated logic that Writer uses for line wrapping?
Comment 1 Ming Hua 2020-02-11 15:56:16 UTC
Created attachment 157799 [details]
A Chinese comma at the start of a line
Comment 2 Ming Hua 2020-02-11 15:57:13 UTC
Created attachment 157801 [details]
A Chinese period on a line all by itself
Comment 3 Ming Hua 2020-02-11 15:59:15 UTC
Created attachment 157802 [details]
linebreaks in the middle of English words
Comment 4 Kevin Suo 2020-02-14 02:26:07 UTC
Works OK for me on Linux, Fedora 31.

版本: 7.0.0.0.alpha0+
Build ID: a092262a573d185171b00d2848cc25c14ad33b6e
CPU 线程: 4; 操作系统: Linux 5.4; UI 渲染: 默认; VCL: gtk3; 
区域语言: zh-CN (zh_CN.UTF-8); UI 语言: zh-CN
Calc: threaded

And
Version: 6.3.6.0.0+
Build ID: cb957e35f54d6c4e9b8b13cd014a09bdf74327b0
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: zh-CN (zh_CN.UTF-8); UI-Language: en-US
Calc: threaded
Comment 5 Xisco Faulí 2020-07-17 11:33:37 UTC
Hello Ming Hua,
Is this issue still reproducible with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 6 Ming Hua 2020-07-19 07:42:10 UTC
Still reproducible in 7.0.0 RC2:
Version: 7.0.0.2 (x64)
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
CPU 线程: 2; 操作系统: Windows 10.0 Build 18363; 界面渲染: Skia/点阵; VCL: win
Locale: zh-CN (zh_CN); 界面: zh-CN
Calc: threaded
Comment 7 Ming Hua 2020-08-06 19:26:06 UTC
Further investigation reveals that this bug is not confined to Tip-of-the-Day dialog, but is prevalent in all multi-line UI elements.  Seems to be something specific about the Windows API used for Chinese UI.

I'll attach two more screenshots, one for "About > License Information" dialog, one for "Insert > Special Characters..." dialog.  Both screenshots are from 7.0.0 final release on Windows 10:
Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU 线程: 2; 操作系统: Windows 10.0 Build 18363; 界面渲染: Skia/点阵; VCL: win
Locale: zh-CN (zh_CN); 界面: zh-CN

BTW another user in the Chinese LO user chat group has reproduced this bug, and I disagree with the "trivial" importance classification, but oh well.
Comment 8 Ming Hua 2020-08-06 19:31:31 UTC
Created attachment 164013 [details]
About > License Information dialog

1. Opening Chinese quotation mark at the end of line
2. Line-breaking in the middle of an English URL
Comment 9 Ming Hua 2020-08-06 20:56:29 UTC
Created attachment 164016 [details]
Insert > Special Characters dialog

Line-breaking in the middle of a English word

And since character description is not translated, this is the evidence that it's a Chinese-UI specific bug, as simply changing the UI language to English will make the line-breaking correct, even on the same Chinese Windows system.
Comment 10 Xisco Faulí 2021-02-09 15:21:01 UTC
Hello Ming Hua,
A new major release of LibreOffice is available since this bug was reported.
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 11 Ming Hua 2021-02-11 16:09:14 UTC
Still reproducible in:
Version: 7.1.0.3 (x64) / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 2; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: threaded

As I've said in comment #7, this was reproduced by another Chinese Windows user in a local chat group when I asked.  It should be 100% reproducible in the right environment.  It's just that there are too few Chinese Windows user here on Bugzilla.
Comment 12 Kevin Suo 2023-11-22 09:42:11 UTC
Ming Hua: Is this still an issue on newer versions on Windows? The display of Chinese characters for Tips of The Day looks good on Linux UI for me now.
Comment 13 Ming Hua 2023-11-24 11:39:10 UTC
(In reply to Kevin Suo from comment #12)
> Ming Hua: Is this still an issue on newer versions on Windows?
Yes, still reproducible with:

Version: 7.6.3.2 (X86_64) / LibreOffice Community
Build ID: 29d686fea9f6705b262d369fede658f824154cc0
CPU threads: 12; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: en-US (zh_CN); UI: zh-CN
Calc: CL threaded
Comment 14 Buovjaga 2024-12-30 15:38:10 UTC
Repro word breaking in Insert Special Character dialog.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7408508758d3e88fde78f205a28d67ebff3f47d4
CPU threads: 2; OS: Windows 11 X86_64 (build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: zh-CN
Calc: threaded
Comment 15 Jonathan Clark 2025-04-04 18:59:21 UTC
Reproduced on Linux with:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eeb8ca44ac7994c0552749e190a193a44c956769
CPU threads: 32; OS: Linux 6.11; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: zh-CN
Calc: threaded

also with:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eeb8ca44ac7994c0552749e190a193a44c956769
CPU threads: 32; OS: Linux 6.11; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: ja-JP
Calc: threaded

but as a sanity check, not with English:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eeb8ca44ac7994c0552749e190a193a44c956769
CPU threads: 32; OS: Linux 6.11; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

So this seems to suggest we have a general problem drawing CJK UI text with VCL, which is covered up by certain Linux backends.
Comment 16 Commit Notification 2025-04-09 04:48:36 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5a03d511f46ecc05aab35bb29e714b46f5638b1b

tdf#130592 i18npool: Fix incorrect line breaking in mixed CJK+Latin

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2025-04-09 14:34:19 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/6aad8cb6d5b7c936a7e55126d849e691735fd1f5

tdf#130592 i18npool: Fix incorrect line breaking in mixed CJK+Latin

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.