tdf#130592 i18npool: Fix incorrect line breaking in mixed CJK+Latin

This change updates the CJK BreakIterator to run ICU line breaking rules
after applying user forbidden rules. This fixes several identified CJK
GUI text rendering issues, most significantly that embedded English runs
were previously broken using CJK break rules, rather than using the
correct English rules.

By implementing this fallback to the ICU rules, the CJK BreakIterator
now also correctly handles non-breaking characters. This change
therefore also fixes tdf#117554.

Change-Id: I3bacc7e2b559729df2c37c010974d180c8eef1f5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183825
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit 5a03d511f46ecc05aab35bb29e714b46f5638b1b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183935
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>